<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Boxee Remote</string>
<string name="host_key">host</string>
<string name="port_key">port</string>
<string name="settings">Settings</string>
<string name="host_title">Host</string>
<string name="host_summary">Hostname or IP address of the machine running Boxee</string>
<string name="port_title">Port</string>
<string name="port_summary">Port of the boxee service, 8800 by default.</string>
<string name="no_wifi">Wifi unavailable, cannot access local boxee host. Connect to wifi or disable this check in settings</string>
<string name="require_wifi_key">require_wifi</string>
<string name="require_wifi_title">Require Wifi Connection</string>
<string name="require_wifi_yes">Wifi must be active</string>
<string name="require_wifi_no">Allow connection over mobile internet</string>
<string name="hide_arrows_yes">Hide navigation (use trackball)</string>
<string name="hide_arrows_no">Reveal navigation</string>
<string name="hide_arrows">hide_arrows</string>
<string name="hide_arrows_title">Hide Navigation Graphics</string>
</resources>
